Further fixes to horizons in plots + "SVAR"="VAR" in legends

--- a/DFM/Reporting/plot_best_method.ipynb
+++ b/DFM/Reporting/plot_best_method.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "# Import data\n",
     "data = np.genfromtxt(folder + '/tradeoff_best.csv', delimiter=',')\n",
-    "h = data[0,1:].flatten()\n",
+    "h = data[0,1:].flatten()-1\n",
     "w = data[1:,0].flatten()\n",
     "z = data[1:,1:]"
    ]
@@ -35,7 +35,7 @@
    "source": [
     "# Define colors and hatches\n",
     "\n",
-    "methods = ['SVAR', 'BC SVAR', 'BVAR', 'LP', 'Pen LP', 'VAR avg'] # Method names\n",
+    "methods = ['VAR', 'BC VAR', 'BVAR', 'LP', 'Pen LP', 'VAR avg'] # Method names\n",
     "lines = np.array([[0.4940,    0.1840,    0.5560],\n",
     "                  [0.9290,    0.6940,    0.1250],\n",
     "                  [0,         0.4470,    0.7410],\n",
@@ -90,20 +90,13 @@
     "plt.close(fig2) # Close the contour plot\n",
     "\n",
     "# Axis ticks+labels\n",
-    "plt.xticks(np.insert(np.arange(2,np.amax(h)+1,2),0,1))\n",
+    "plt.xticks(np.arange(0,np.amax(h)+1,2))\n",
     "plt.xlabel('Horizon')\n",
     "plt.ylabel('Bias Weight')\n",
     "\n",
     "plt.savefig(folder + '/tradeoff_best.eps') # Save figure\n",
     "plt.savefig(folder + '/tradeoff_best.png', dpi=200)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
