--- a/DFM/Reporting/plot_best_method.ipynb
+++ b/DFM/Reporting/plot_best_method.ipynb
@@ -19,10 +19,9 @@
    "source": [
     "# Experiment\n",
     "folder = 'fig/baseline/lag4/DFM_ObsShock'\n",
-    "filename = 'tradeoff_loss_best'\n",
     "\n",
     "# Import data\n",
-    "data = np.genfromtxt(folder + '/' + filename + '.csv', delimiter=',')\n",
+    "data = np.genfromtxt(folder + '/tradeoff_best.csv', delimiter=',')\n",
     "h = data[0,1:].flatten()-1\n",
     "w = data[1:,0].flatten()\n",
     "z = data[1:,1:]"
@@ -95,8 +94,8 @@
     "plt.xlabel('Horizon')\n",
     "plt.ylabel('Bias Weight')\n",
     "\n",
-    "plt.savefig(folder + '/' + filename + '.eps') # Save figure\n",
-    "plt.savefig(folder + '/' + filename + '.png', dpi=200)"
+    "plt.savefig(folder + '/tradeoff_best.eps') # Save figure\n",
+    "plt.savefig(folder + '/tradeoff_best.png', dpi=200)"
    ]
   }
  ],
