--- a/DFM/Reporting/plot_best_method.ipynb
+++ b/DFM/Reporting/plot_best_method.ipynb
@@ -36,14 +36,15 @@
    "source": [
     "# Define colors and hatches\n",
     "\n",
-    "methods = ['VAR', 'BC VAR', 'BVAR', 'LP', 'Pen LP', 'VAR avg'] # Method names\n",
+    "methods = ['VAR', 'BC VAR', 'BVAR', 'LP', 'BC LP', 'Pen LP', 'VAR avg'] # Method names\n",
     "lines = np.array([[0.4940,    0.1840,    0.5560],\n",
     "                  [0.9290,    0.6940,    0.1250],\n",
     "                  [0,         0.4470,    0.7410],\n",
     "                  [0.8500,    0.3250,    0.0980],\n",
+    "                  [0.5,       0.5,       0.5   ],\n",
     "                  [0.4660,    0.6740,    0.1880],\n",
     "                  [0.3010,    0.7450,    0.9330]]) # Colors for each method\n",
-    "hatches = ['', '-', '.', '/', 'x', 'o'] # Hatch pattern for each method"
+    "hatches = ['', '-', '.', '/', '|', 'x', 'o'] # Hatch pattern for each method"
    ]
   },
   {
@@ -75,16 +76,16 @@
     "fig1, ax1 = plt.subplots()\n",
     "fig2, ax2 = plt.subplots()\n",
     "\n",
-    "cs = ax1.pcolormesh(h, w, z, cmap=cmap, norm=norm) # Plot with colored regions\n",
+    "cs = ax1.pcolormesh(h, w, z, cmap=cmap, norm=norm, shading='nearest') # Plot with colored regions\n",
     "\n",
     "for i in range(numl):\n",
     "    zm = np.ma.masked_not_equal(z, i+1)\n",
-    "    ax1.pcolor(h, w, zm, hatch=hatches[i], alpha=0.) # Add hatch patterns one at a time\n",
+    "    ax1.pcolor(h, w, zm, hatch=hatches[i], alpha=0., shading='nearest') # Add hatch patterns one at a time\n",
     "\n",
     "cp = ax2.contourf(h, w, z, levels=np.arange(numl+1), cmap=cmap, norm=norm, hatches=hatches)\n",
     "# Hidden contour plot only used for the legend\n",
     "\n",
-    "cbar = fig1.colorbar(cp, ticks=np.arange(numl)+0.5, aspect=10) # Legend\n",
+    "cbar = fig1.colorbar(cp, ticks=np.arange(numl)+0.5, aspect=10, ax=ax1) # Legend\n",
     "cbar.ax.set_yticklabels(methods)\n",
     "cbar.ax.tick_params(size=0)\n",
     "\n",
@@ -102,7 +103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
